comentarios de los usuarios en las publicaciones

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="helper_requiered">Este campo es requerido\n</string>
     <string name="post_message_post_fail">No se logro subir la foto\n</string>
     <string name="post_succes">Foto publicada\n</string>
+    <string name="Comenta">Comenta\n</string>
 </resources>
