--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Prototipo_canino</string>
+    <string name="app_name">Buddy</string>
     <string name="home_title">Inicio</string>
     <string name="home_Recetas">Recetas\n</string>
     <string name="home_profile">perfil</string>
@@ -8,8 +8,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="main_auth_welcome">Bienvenido\n</string>
-    <string name="dialog_delete_title">Eliminar la publicacion?</string>
-    <string name="dialog_delete_confirm">Eliminar?\n</string>
+    <string name="dialog_delete_title">¿Eliminar la publicacion?</string>
+    <string name="dialog_delete_confirm">¿Eliminar?\n</string>
     <string name="home_delte_photo_error">Error al eliminar la publicacion</string>
     <string name="dialog_delete_cancel">Cancelar</string>
     <string name="post_message_title">Seleccione una imagen</string>
