--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="post_message_post_fail">No se logro subir la foto\n</string>
     <string name="post_succes">Foto publicada\n</string>
     <string name="Comenta">Comenta\n</string>
+    <string name="Ingrese_foto">presione sobre el icono para subir una foto</string>
 </resources>
