--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Buddy</string>
     <string name="home_title">Inicio</string>
     <string name="home_Recetas">Recetas\n</string>
-    <string name="home_profile">perfil</string>
-    <string name="home_Ejercicios">ejercicios</string>
+    <string name="home_profile">Perfil</string>
+    <string name="home_Ejercicios">Rjercicios</string>
     <string name="home_Enfermedades">Enfermedades</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -13,8 +13,8 @@
     <string name="home_delte_photo_error">Error al eliminar la publicacion</string>
     <string name="dialog_delete_cancel">Cancelar</string>
     <string name="post_message_title">Seleccione una imagen</string>
-    <string name="dialog_logout_title">Desea Cerrar sesion</string>
-    <string name="dialog_logout_confirm">Cerrar?</string>
+    <string name="dialog_logout_title">¿Desea cerrar sesion?</string>
+    <string name="dialog_logout_confirm">¿Cerrar?</string>
     <string name="dialog_logout_cancel">Cancelar?</string>
     <string name="post_message_valid_title">Por favor, añada un titulo</string>
     <string name="helper_requiered">Este campo es requerido\n</string>
