--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="home_title">Inicio</string>
     <string name="home_Recetas">Recetas\n</string>
     <string name="home_profile">Perfil</string>
-    <string name="home_Ejercicios">Rjercicios</string>
+    <string name="home_Ejercicios">Ejercicios</string>
     <string name="home_Enfermedades">Enfermedades</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
